moving logic to fix incorrect height on mobile (#6)

--- a/src/app/core/shared/+shell/components/shell.component.css
+++ b/src/app/core/shared/+shell/components/shell.component.css
@@ -22,4 +22,8 @@
     padding-left: 300px;
     overflow: hidden;
   }
+
+  @media not all and (hover:hover) {
+    height: var(--app-height);
+  }
 }
